Fix  overflow-y scroll to auto

--- a/src/assets/styles/layout/container.css
+++ b/src/assets/styles/layout/container.css
@@ -1,6 +1,6 @@
 .scrollY {
   max-height: inherit;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 .flex-column {
